# lean-coding-template

./: Dockerfile  pyproject.toml
environment/: bash_session.py  dinit_manager.py  file_ops.py  grading.py  run.py  server.py  utils.py
server/: main.py  spec.py
server/problems/: basic.py
utils/: fmtprompt.py  imagectl3.py
