[project]
name = "hud-controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.3.0",
    "mcp[cli]>=1.10.1",
    "pydantic>=2.11.4",
    "numpy>=1.26.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "httpx>=0.24.0",
    "defusedxml>=0.7.1",
    "hud-python[agents]>=0.4.53",
]

[project.optional-dependencies]
dev = ["pytest>=8.4.0", "ruff>=0.11.2", "pre-commit>=3.5.0"]

[project.scripts]
hud_eval = "server.main:main"
setup_problem = "server.main:setup_problem_script"
grade_problem = "server.main:grade_problem_script"
validate_problem = "server.main:validate_problem_script"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["environment", "server"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
